Fixes and Enhancements since Version 0.5 alpha 3

 - Changed 'running.lookupCommand()' to use the command's 'getCommandParent()'
   method, so that commands using the '--config' option will utilize the
   specified configuration(s) to lookup subcommands.
   
 - Added a '-c/--config' option to PEAK bootstrap commands to load an .ini
   configuration file in a new service area before executing any subcommands.
   
   This allows you to do things like::
   
        peak launch -c bulletins ref:sitemap@sitemap.xml

   which loads the 'bulletins' configuration file before launching the sitemap.
   Note that if you are subclassing 'commands.Bootstrap' you can suppress this
   option using 'options.reject_inheritance("-c","--config")' in the body of
   your subclass' class definition.  You may wish to do this if your
   application's subcommands must run in the same service area as the parent
   command.  (E.g. if the parent command expects the subcommand to partake in
   a transaction controlled by the parent command.)

 - Added a 'value' property to 'model.Enumeration', so that you can access
   an enumeration instance's value (i.e., the value it hashes and compares
   equal to)

 - Added a 'binding.hasParent(component,parent)' API function, which is
   specially optimized for use with generic functions, so that you can
   define generic function methods that apply only within some part of a
   component hierarchy.
   
 - PEAK no longer supports Python 2.2; Python 2.3.4 or better is required.

 - The kjbuckets extension module is no longer built and installed by default;
   you must explicitly enable it with a '--with-kjbuckets' flag passed to
   'setup.py'.  Please port your code as soon as practical, this option will
   go away soon.

 - Use of the included 'kjbuckets' module is now DEPRECATED, due to increasing
   bitrot.  Aaron Watters originally wrote this extension for Python 1.2, and
   it has not been well-maintained for newer versions of the Python/C API.